new file:   aboutme.html 	new file:   contact.html 	new file:   images/img.jpeg 	modified:   index.html 	new file:   projects.html 	new file:   style.css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,47 @@
+<!DOCTYPE html>
+<!-- DUE MAY 18TH -->
 <html>
-  <body>
-    <h1>Logan Merry</h1>
-  </body>
+	<head>
+		<title>Portfolio</title>
+		<link rel="stylesheet" href="./style.css">
+	</head>
+	<body>
+		<div class="header">
+			<h1>Logan Merry</h1>
+		</div>
+		<div class="navigation">
+			<nav>
+				<a href="./index.html">Home</a>
+				<a href="./aboutme.html">About Me</a>
+				<a href="./projects.html">Projects</a>
+				<a href="./contact.html">Contact</a>
+			</nav>
+			<p class="headblurb">I am a student with skills in Web Design and Graphic Design. *add info blurb*</p>
+		</div>
+		<div class="content">
+				<div class="panels"> 
+					<div class="lpanel" class="panel">
+						<h1>About Me</h1>
+						<a href="./aboutme.html"> 
+							<img src="./images/img.jpeg" alt="#" style="width: 100%;">
+						</a>
+					</div>
+					<div class="cpanel" class="panel">
+						<h1>Projects</h1>
+						<a href="./aboutme.html"> 
+							<img src="./images/img.jpeg" alt="#" style="width: 100%;">
+						</a>
+					</div>
+					<div class="rpanel" class="panel">
+						<h1>Contact Info</h1>
+						<a href="./aboutme.html"> 
+							<img src="./images/img.jpeg" alt="#" style="width: 100%;">
+						</a>
+					</div>
+				</div> 
+		</div>
+		<div class="footer">
+			<h1>Footer</h1>
+		</div>
+	</body>
 </html>
