new file:   images/header.jpg

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div class="header">
-			<h1>Logan Merry</h1>
+			<img src="./images/header.jpg" alt="placeholder" style="width: 100%; height: 200px;">
 		</div>
 		<div class="navigation">
 			<nav>
@@ -23,19 +23,19 @@
 					<div class="lpanel" class="panel">
 						<h1>About Me</h1>
 						<a href="./aboutme.html"> 
-							<img src="./images/img.jpeg" alt="#" style="width: 100%;">
+							<img src="./images/img.jpeg" alt="#" class="panelcover" style="width: 100%;">
 						</a>
 					</div>
 					<div class="cpanel" class="panel">
 						<h1>Projects</h1>
 						<a href="./aboutme.html"> 
-							<img src="./images/img.jpeg" alt="#" style="width: 100%;">
+							<img src="./images/img.jpeg" alt="#" class="panelcover" style="width: 100%;">
 						</a>
 					</div>
 					<div class="rpanel" class="panel">
 						<h1>Contact Info</h1>
 						<a href="./aboutme.html"> 
-							<img src="./images/img.jpeg" alt="#" style="width: 100%;">
+							<img src="./images/img.jpeg" alt="#" class="panelcover" style="width: 100%;">
 						</a>
 					</div>
 				</div> 
