--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div class="header">
-			<h1>Header</h1>
+			<img src="./images/header.jpg" alt="placeholder" style="width: 100%; height: 200px;">
 		</div>
 		<div class="navigation">
 			<nav>
@@ -17,7 +17,7 @@
 			</nav>
 		</div>
 		<div class="content">
-			<h1>Content</h1>
+			<h1 style="float: left; margin-left: 5%; text-decoration: underline;">About Me</h1>
 		</div>
 		<div class="footer">
 			<h1>Footer</h1>
