--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div class="header">
-			<h1>Header</h1>
+			<img src="./images/header.jpg" alt="placeholder" style="width: 100%; height: 200px;">
 		</div>
 		<div class="navigation">
 			<nav>
@@ -17,7 +17,18 @@
 			</nav>
 		</div>
 		<div class="content">
-			<h1>Content</h1>
+			<h1 style="margin-right: 70%; text-decoration: underline;">Contact Info</h1>
+			<div>
+				<img src="./images/img.jpeg" alt="#" class="portrait">
+			</div>
+			<div style="display: inline-block; background: white; width: 70%; height: 400px; text-align: left;">
+				<h1 style="text-align: center">Info Here</h1>
+				<p>lorem ipsum</p>
+				<ul>
+					<li>email</li>
+					<li>phone #</li>
+				</ul>
+			</div>
 		</div>
 		<div class="footer">
 			<h1>Footer</h1>
