new file:   gprojects.html 	deleted:    projects.html 	new file:   wprojects.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Portfolio</title>
 		<link rel="stylesheet" href="./style.css">
+		<link rel="stylesheet" href="./layout.css">
 	</head>
 	<body>
 		<div class="header">
@@ -13,10 +14,12 @@
 			<nav>
 				<a href="./index.html">Home</a>
 				<a href="./aboutme.html">About Me</a>
-				<a href="./projects.html">Projects</a>
+				<a href="./wprojects.html">Web Projects</a>
+				<a href="./gprojects.html">Graphic Projects</a>
 				<a href="./contact.html">Contact</a>
 			</nav>
-			<p class="headblurb">I am a student with skills in Web Design and Graphic Design. *add info blurb*</p>
+			<p class="headblurb">Hi! My name is Logan Merry. I am a student with skills in Web Design and Graphic Design. *add info blurb* 
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum mollis eros, id lacinia ipsum tincidunt id. </p>
 		</div>
 		<div class="content">
 				<div class="panels"> 
