--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>About Me</title>
 		<link rel="stylesheet" href="./style.css">
+		<link rel="stylesheet" href="./layout.css">
 	</head>
 	<body>
 		<div class="header">
@@ -12,12 +13,24 @@
 			<nav>
 				<a href="./index.html">Home</a>
 				<a href="./aboutme.html">About Me</a>
-				<a href="./projects.html">Projects</a>
+				<a href="./wprojects.html">Web Projects</a>
+				<a href="./gprojects.html">Graphic Projects</a>
 				<a href="./contact.html">Contact</a>
 			</nav>
 		</div>
 		<div class="content">
-			<h1 style="float: left; margin-left: 5%; text-decoration: underline;">About Me</h1>
+			<h1 style="margin-right: 70%; text-decoration: underline;">About Me</h1>
+			<div>
+				<img src="./images/img.jpeg" alt="#" class="portrait">
+			</div>
+			<div style="display: inline-block; background: white; width: 70%; height: 400px; text-align: left;">
+				<h1 style="text-align: center">Info Here</h1>
+				<p>lorem ipsum</p>
+				<ul>
+					<li>email</li>
+					<li>phone #</li>
+				</ul>
+			</div>
 		</div>
 		<div class="footer">
 			<h1>Footer</h1>
