--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Contact Info</title>
 		<link rel="stylesheet" href="./style.css">
+		<link rel="stylesheet" href="./layout.css">
 	</head>
 	<body>
 		<div class="header">
@@ -12,7 +13,8 @@
 			<nav>
 				<a href="./index.html">Home</a>
 				<a href="./aboutme.html">About Me</a>
-				<a href="./projects.html">Projects</a>
+				<a href="./wprojects.html">Web Projects</a>
+				<a href="./gprojects.html">Graphic Projects</a>
 				<a href="./contact.html">Contact</a>
 			</nav>
 		</div>
