modified:   index.html 	modified:   layout.css 	modified:   style.css

--- a/contact.html
+++ b/contact.html
@@ -15,20 +15,20 @@
 				<a href="./aboutme.html">About Me</a>
 				<a href="./wprojects.html">Web Projects</a>
 				<a href="./gprojects.html">Graphic Projects</a>
-				<a href="./contact.html">Contact</a>
+				<a class="active" href="./contact.html">Contact</a>
 			</nav>
 		</div>
 		<div class="content">
-			<h1 style="margin-right: 70%; text-decoration: underline;">Contact Info</h1>
+			<!-- <h1 style="margin-right: 70%; text-decoration: underline;">Contact Info</h1> -->
 			<div>
 				<img src="./images/img.jpeg" alt="#" class="portrait">
 			</div>
 			<div style="display: inline-block; background: white; width: 70%; height: 400px; text-align: left;">
-				<h1 style="text-align: center">Info Here</h1>
-				<p>lorem ipsum</p>
+				<h1 style="text-align: center">Contact Info</h1>
 				<ul>
-					<li>email</li>
-					<li>phone #</li>
+					<li>Email: loganmerry01@gmail.com</li>
+					<li>636-697-0881</li>
+					<li>Github: logcampmerry</li>
 				</ul>
 			</div>
 		</div>
