--- a/gprojects.html
+++ b/gprojects.html
@@ -14,7 +14,7 @@
 				<a href="./index.html">Home</a>
 				<a href="./aboutme.html">About Me</a>
 				<a href="./wprojects.html">Web Projects</a>
-				<a href="./gprojects.html">Graphic Projects</a>
+				<a class="active" href="./gprojects.html">Graphic Projects</a>
 				<a href="./contact.html">Contact</a>
 			</nav>
 		</div>
