--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 		</div>
 		<div class="navigation">
 			<nav>
-				<a href="./index.html">Home</a>
+				<a href="./index.html" class="active">Home</a>
 				<a href="./aboutme.html">About Me</a>
 				<a href="./wprojects.html">Web Projects</a>
 				<a href="./gprojects.html">Graphic Projects</a>
 				<a href="./contact.html">Contact</a>
 			</nav>
-			<p class="headblurb">Hi! My name is Logan Merry. I am a student with skills in Web Design and Graphic Design. *add info blurb* 
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec bibendum mollis eros, id lacinia ipsum tincidunt id. </p>
+			<p class="headblurb">Hi! My name is Logan Merry. I am a student and former member 
+			of the Computer Software Development course at the Lewis and Clark Career Center in 
+			St. Charles, Missouri. I have basic skills in Web Development and Graphic Design as well 
+			as light experience with JavaScript and Python programming.</p>
 		</div>
 		<div class="content">
 				<div class="panels"> 
@@ -31,7 +33,7 @@
 					</div>
 					<div class="cpanel" class="panel">
 						<h1>Projects</h1>
-						<a href="./aboutme.html"> 
+						<a href="./wprojects.html"> 
 							<img src="./images/img.jpeg" alt="#" class="panelcover" style="width: 100%;">
 						</a>
 					</div>
