--- a/aboutme.html
+++ b/aboutme.html
@@ -12,24 +12,21 @@
 		<div class="navigation">
 			<nav>
 				<a href="./index.html">Home</a>
-				<a href="./aboutme.html">About Me</a>
+				<a class="active" href="./aboutme.html">About Me</a>
 				<a href="./wprojects.html">Web Projects</a>
 				<a href="./gprojects.html">Graphic Projects</a>
 				<a href="./contact.html">Contact</a>
 			</nav>
 		</div>
 		<div class="content">
-			<h1 style="margin-right: 70%; text-decoration: underline;">About Me</h1>
+			<!-- <h1 style="margin-right: 70%; text-decoration: underline;">About Me</h1> -->
 			<div>
 				<img src="./images/img.jpeg" alt="#" class="portrait">
 			</div>
 			<div style="display: inline-block; background: white; width: 70%; height: 400px; text-align: left;">
-				<h1 style="text-align: center">Info Here</h1>
-				<p>lorem ipsum</p>
-				<ul>
-					<li>email</li>
-					<li>phone #</li>
-				</ul>
+				<h1 style="text-align: center">About Me</h1>
+				<p class="abme">I am a graduate from St. Charles West High School as well as the Lewis and Clark 
+				Career Center. I enjoy art and the process of putting things together. </p>
 			</div>
 		</div>
 		<div class="footer">
