--- a/wprojects.html
+++ b/wprojects.html
@@ -13,7 +13,7 @@
 			<nav>
 				<a href="./index.html">Home</a>
 				<a href="./aboutme.html">About Me</a>
-				<a href="./wprojects.html">Web Projects</a>
+				<a class="active" href="./wprojects.html">Web Projects</a>
 				<a href="./gprojects.html">Graphic Projects</a>
 				<a href="./contact.html">Contact</a>
 			</nav>
