modified:   aboutme.html 	modified:   contact.html 	modified:   gprojects.html 	modified:   index.html 	modified:   style.css 	modified:   wprojects.html

--- a/gprojects.html
+++ b/gprojects.html
@@ -12,14 +12,14 @@
 		<div class="navigation">
 			<nav>
 				<a href="./index.html">Home</a>
-				<a href="./aboutme.html">About Me</a>
 				<a href="./wprojects.html">Web Projects</a>
 				<a class="active" href="./gprojects.html">Graphic Projects</a>
-				<a href="./contact.html">Contact</a>
+				<a href="./aboutme.html">About/Contact</a>
+				<!--<a href="./contact.html">Contact</a>-->
 			</nav>
 		</div>
 		<div class="content">
-			<h1 style="display: block; margin: auto; text-decoration: underline; padding: 1%;">Projects</h1>
+			<!--<h1 style="display: block; margin: auto; text-decoration: underline; padding: 1%;">Projects</h1> -->
 			<div class="projects">
 				<img class="graphic" src="./images/blue.jpg" alt="#">
 				<img class="graphic" src="./images/yellow.jpg" alt="#">
