--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
 		</div>
 		<div class="navigation">
 			<nav>
-				<a href="./index.html" class="active">Home</a>
-				<a href="./aboutme.html">About Me</a>
+				<a class="active" href="./index.html">Home</a>
 				<a href="./wprojects.html">Web Projects</a>
 				<a href="./gprojects.html">Graphic Projects</a>
-				<a href="./contact.html">Contact</a>
+				<a href="./aboutme.html">About/Contact</a>
+				<!--<a href="./contact.html">Contact</a>-->
 			</nav>
-			<p class="headblurb">Hi! My name is Logan Merry. I am a student and former member 
-			of the Computer Software Development course at the Lewis and Clark Career Center in 
-			St. Charles, Missouri. I have basic skills in Web Development and Graphic Design as well 
-			as light experience with JavaScript and Python programming.</p>
+			<p class="headblurb">Hi! My name is Logan Merry. I am a student in 
+			St. Charles, Missouri with basic skills in Web Development and Graphic 
+			Design as well as light experience with JavaScript and Python programming.</p>
 		</div>
 		<div class="content">
 				<div class="panels"> 
