--- a/wprojects.html
+++ b/wprojects.html
@@ -12,14 +12,14 @@
 		<div class="navigation">
 			<nav>
 				<a href="./index.html">Home</a>
-				<a href="./aboutme.html">About Me</a>
 				<a class="active" href="./wprojects.html">Web Projects</a>
 				<a href="./gprojects.html">Graphic Projects</a>
-				<a href="./contact.html">Contact</a>
+				<a href="./aboutme.html">About/Contact</a>
+				<!--<a href="./contact.html">Contact</a>-->
 			</nav>
 		</div>
 		<div class="content">
-			<h1 style="display: block; margin: auto; text-decoration: underline; padding: 1%;">Projects</h1>
+			<!-- <h1 style="display: block; margin: auto; text-decoration: underline; padding: 1%;">Projects</h1> -->
 			<div class="projects">
 				<div class="square"><div class="insquare"><p class="title">Title</p><img src="./images/header.jpg" alt="#" style="width: 100%"><p class="desc">Brief description of project</p></div></div>
 				<div class="square"><div class="insquare"><p class="title">Title</p><img src="./images/header.jpg" alt="#" style="width: 100%"><p class="desc">Brief description of project</p></div></div>
