--- a/aboutme.html
+++ b/aboutme.html
@@ -12,10 +12,10 @@
 		<div class="navigation">
 			<nav>
 				<a href="./index.html">Home</a>
-				<a class="active" href="./aboutme.html">About Me</a>
 				<a href="./wprojects.html">Web Projects</a>
 				<a href="./gprojects.html">Graphic Projects</a>
-				<a href="./contact.html">Contact</a>
+				<a class="active" href="./aboutme.html">About/Contact</a>
+				<!--<a href="./contact.html">Contact</a>-->
 			</nav>
 		</div>
 		<div class="content">
@@ -23,10 +23,20 @@
 			<div>
 				<img src="./images/img.jpeg" alt="#" class="portrait">
 			</div>
-			<div style="display: inline-block; background: white; width: 70%; height: 400px; text-align: left;">
-				<h1 style="text-align: center">About Me</h1>
-				<p class="abme">I am a graduate from St. Charles West High School as well as the Lewis and Clark 
-				Career Center. I enjoy art and the process of putting things together. </p>
+			<div style="display: inline-block; background: white; width: 70%; height: 400px; text-align: left; margin-top: 5%; margin-bottom: 5%; border-bottom: 10px solid darkslategrey; border-right: 6px solid darkslategrey;">
+
+				<h1 style="float: left; margin-left: 14%; text-decoration: underline;">About Me</h1>
+				<h1 style="float: right; margin-right: 14%; text-decoration: underline;">Contact Info</h1>
+				
+				<p class="abme">I am a graduate from St. Charles West High School as well as the 
+				Software Development program at the Lewis and Clark Career Center. I enjoy art and 
+				the process of putting things together. I have had experience using software such as 
+				Photoshop and GIMP to create both commercial and artistic work.</p>				
+				<ul>
+					<li>Email: loganmerry01@gmail.com</li>
+					<li>636-697-0881</li>
+					<li>Github: logcampmerry</li>
+				</ul>
 			</div>
 		</div>
 		<div class="footer">
