--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<!-- <html>
 	<head>
 		<title>Contact Info</title>
 		<link rel="stylesheet" href="./style.css">
@@ -19,7 +19,7 @@
 			</nav>
 		</div>
 		<div class="content">
-			<!-- <h1 style="margin-right: 70%; text-decoration: underline;">Contact Info</h1> -->
+			<!-- <h1 style="margin-right: 70%; text-decoration: underline;">Contact Info</h1> 
 			<div>
 				<img src="./images/img.jpeg" alt="#" class="portrait">
 			</div>
@@ -36,4 +36,4 @@
 			<h1>Footer</h1>
 		</div>
 	</body>
-</html>
+</html> -->
