new file:   images/header.png 	modified:   index.html 	modified:   style.css

--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div class="header">
-			<img src="./images/header.jpg" alt="placeholder" style="width: 100%; height: 200px;">
+			<img src="./images/header.png" alt="placeholder" style="width: 100%; height: 200px;">
 		</div>
 		<div class="navigation">
 			<nav>
@@ -23,7 +23,7 @@
 			<div>
 				<img src="./images/img.jpeg" alt="#" class="portrait">
 			</div>
-			<div style="display: inline-block; background: white; width: 70%; height: 400px; text-align: left; margin-top: 5%; margin-bottom: 5%; border-bottom: 10px solid darkslategrey; border-right: 6px solid darkslategrey;">
+			<div style="display: inline-block; background: white; width: 70%; height: 400px; text-align: left; margin-top: 5%; margin-bottom: 5%; border-bottom: 10px solid #402f4f; border-right: 6px solid #402f4f;">
 
 				<h1 style="float: left; margin-left: 14%; text-decoration: underline;">About Me</h1>
 				<h1 style="float: right; margin-right: 14%; text-decoration: underline;">Contact Info</h1>
