--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="header">
-			<img src="./images/header.jpg" alt="placeholder" style="width: 100%; height: 200px;">
+			<img src="./images/header.png" alt="placeholder" style="width: 100%; height: 200px;">
 		</div>
 		<div class="navigation">
 			<nav>
