modified:   aboutme.html 	modified:   index.html 	modified:   style.css

--- a/aboutme.html
+++ b/aboutme.html
@@ -34,7 +34,7 @@
 				Photoshop and GIMP to create both commercial and artistic work.</p>				
 				<ul>
 					<li>Email: loganmerry01@gmail.com</li>
-					<li>636-697-0881</li>
+					<li>Cell #: 636-697-0881</li>
 					<li>Github: logcampmerry</li>
 				</ul>
 			</div>
