--- a/wprojects.html
+++ b/wprojects.html
@@ -20,7 +20,7 @@
 		</div>
 		<div class="content">
 			<!-- <h1 style="display: block; margin: auto; text-decoration: underline; padding: 1%;">Projects</h1> -->
-			<div class="projects">
+			<div class="wprojects">
 				<div class="square"><div class="insquare"><p class="title">Title</p><img src="./images/header.jpg" alt="#" style="width: 100%"><p class="desc">Brief description of project</p></div></div>
 				<div class="square"><div class="insquare"><p class="title">Title</p><img src="./images/header.jpg" alt="#" style="width: 100%"><p class="desc">Brief description of project</p></div></div>
 				<div class="square"><div class="insquare"><p class="title">Title</p><img src="./images/header.jpg" alt="#" style="width: 100%"><p class="desc">Brief description of project</p></div></div>
